--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,25 @@ pickle-email-*.html
 # Environment files that may contain sensitive data
 .env
 .powenv
+
+
+# Ignore Byebug command history file.
+.byebug_history
+
+# Ignore node_modules
+node_modules/
+
+# Ignore precompiled javascript packs
+/public/packs
+/public/packs-test
+/public/assets
+
+# Ignore yarn files
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+# Ignore uploaded files in development
+/storage/*
+!/storage/.keep
+/public/uploads
